--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Hello! I'm Eduardo Lopez. Product Marketer and Author of the Fintech Explainers newsletter. I lead go-to-market strategy and product marketing for fintechs.">
+  <meta name="keywords" content="eduardo lopez, eduardolopez">
+  <meta name="title" content="Eduardo Lopez">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:title" content="">
+  <meta name="twitter:site" content="https://alexkehayias.com">
+  <meta name="twitter:image" content="/img/favicon.png">
+  <meta name="twitter:creator" content="@alexkehayias">
+  <link rel="icon" href="/img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="/main.css">
+  
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="X">
+  
+</head>
+<body>
+  <div class="main-container">
+    <div class="row" style="margin-bottom: 20px;">
+      <div class="grid twelve" style="display: flex; align-items: center;">
+        <div style="flex-grow: 1;">
+          <a href="/" style="text-decoration: none; color: inherit;">
+            <span class="logo">EL</span>
+          </a>
+        </div>
+        <a href="/essays" class="nav-item">Essays</a>
+        <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
+        <a href="/projects" class="nav-item">Learning</a>
+        <a href="https://notes.alexkehayias.com" class="nav-item">Notes</a>
+      </div>
+    </div>
+    <main>
+      
+<h1 id="hi-there-i-m-alex">Hello! I'm Eduardo!</h1>
+<p>I'm a <a href="https://linkedin.com/iam/eduardolopez">product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. Currently lead product marketing at <a href="https://lithic.com">Lithic</a>. Previously built the product marketing function at <a href="https://treasuryprime.com">Treasury Prime</a>, <a href="https://fastpsring.com">Fastspring</a>, and <a href="https://paystand.com">Paystand</a>.</p>
+<p>Get in touch on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
 
+<hr style="margin: 3em 0;" />
+<h2>Latest</h2>
+    </main>
+  </div>
+  <footer>
+    <p>© Eduardo Lopez</p>
+  </footer>
+</body> 
