--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:image" content="/img/favicon.png">
   <meta name="twitter:creator" content="@alexkehayias">
   <link rel="icon" href="/img/favicon.png">
-  <link rel="stylesheet" type="text/css" href="/main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   
   <link rel="alternate" type="application/rss+xml" title="RSS" href="X">
   
