--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="">
   <meta name="twitter:title" content="">
-  <meta name="twitter:site" content="https://alexkehayias.com">
+  <meta name="twitter:site" content="https://elopez.net">
   <meta name="twitter:image" content="/img/favicon.png">
   <meta name="twitter:creator" content="@alexkehayias">
   <link rel="icon" href="/img/favicon.png">
@@ -28,12 +28,12 @@
         <a href="/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
         <a href="/projects" class="nav-item">Learning</a>
-        <a href="https://notes.alexkehayias.com" class="nav-item">Notes</a>
+        <a href="" class="nav-item">Notes</a>
       </div>
     </div>
     <main>
       
-<h1 id="hi-there-i-m-alex">Hello! I'm Eduardo!</h1>
+<h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
 <p>I'm a <a href="https://linkedin.com/iam/eduardolopez">product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. Currently lead product marketing at <a href="https://lithic.com">Lithic</a>. Previously built the product marketing function at <a href="https://treasuryprime.com">Treasury Prime</a>, <a href="https://fastpsring.com">Fastspring</a>, and <a href="https://paystand.com">Paystand</a>.</p>
 <p>Get in touch on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
 
