--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
         <a href="/projects" class="nav-item">Learning</a>
-        <a href="/notes.html" class="nav-item">Notes</a>
+        <a href="/elopez/notes" class="nav-item">Notes</a>
       </div>
     </div>
     <main>
