--- a/notes.html
+++ b/notes.html
@@ -52,7 +52,7 @@
     <div class="grid twelve">
       <h1>Notes From the Field</h1>
       <article>
-        <p>Welcome to my notes! I was inspired by <a href"https://notes.alexkehayias.com/">Alex Kehayias' website</a> and decided to start publishing notes to better understand what I&rsquo;ve learned and to explore new ideas. I would love to hear from you—leave a comment or reach out on twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
+        <p>Welcome to my notes! I was inspired by <a href="https://notes.alexkehayias.com/">Alex Kehayias' website</a> and decided to start publishing notes to better understand what I&rsquo;ve learned and to explore new ideas. I would love to hear from you—leave a comment or reach out on twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
 <p>What&rsquo;s on my mind lately?</p>
 <ul>
 <li>Building an online community</li>
