--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
 <h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
 <p>I'm a <a href="https://linkedin.com/iam/eduardolopez">product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I lead product marketing at <a href="https://lithic.com">Lithic</a>. Previously built the product marketing function at <a href="https://treasuryprime.com">Treasury Prime</a>, <a href="https://fastpsring.com">Fastspring</a>, and <a href="https://paystand.com">Paystand</a>.</p>
-<p>This blog is where I'll share my essays, notes, and portfolio.</p>
+<p>This blog is where I'll share my essays, notes, and what I'm learning.</p>
 <p>Get in touch on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
 
 <hr style="margin: 3em 0;" />
