--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <span class="logo">EL</span>
           </a>
         </div>
-        <a href="/essays" class="nav-item">Essays</a>
+        <a href="/elopez/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-        <a href="/projects" class="nav-item">Learning</a>
+        <a href="/elopez/learning" class="nav-item">Learning</a>
         <a href="/elopez/notes" class="nav-item">Notes</a>
       </div>
     </div>
