--- a/notes.html
+++ b/notes.html
@@ -23,8 +23,22 @@
 </head>
 <body>
   <div class="content">
-    <div class="main-container">
-      
+    <div class="main-container">	    
+	    <div class="row" style="margin-bottom: 20px;">
+	      <div class="grid twelve" style="display: flex; align-items: center;">
+		<div style="flex-grow: 1;">
+		  <a href="/" style="text-decoration: none; color: inherit;">
+		    <span class="logo">EL</span>
+		  </a>
+		</div>
+		<a href="/elopez/essays" class="nav-item">Essays</a>
+		<a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
+		<a href="/elopez/learning" class="nav-item">Learning</a>
+		<a href="/elopez/notes" class="nav-item">Notes</a>
+	      </div>
+    </div>
+    <main>
+	    
 <nav class="row">
   <div class="grid twelve" style="display: flex; align-items: center;">
     <div style="flex: 1 1 0%; display: flex; align-items: center;">
