--- a/notes.html
+++ b/notes.html
@@ -22,8 +22,9 @@
   
 </head>
 <body>
-    <main>
-	    
+    <div class="content">
+    <div class="main-container">
+      
 <nav class="row">
   <div class="grid twelve" style="display: flex; align-items: center;">
     <div style="flex: 1 1 0%; display: flex; align-items: center;">
