--- a/notes.html
+++ b/notes.html
@@ -28,7 +28,7 @@
 <nav class="row">
   <div class="grid twelve" style="display: flex; align-items: center;">
     <div style="flex: 1 1 0%; display: flex; align-items: center;">
-      <a class="logolink" href="/">
+      <a class="logolink" href="https://fintechgtm.github.io/elopez">
         <span class="logo">EL</span>
         <span style="font-size: 15px; font-weight: 600; margin-left: 4px; text-transform: uppercase; letter-spacing: 2px;">Notes</span>
       </a>
