--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <a href="/elopez/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-        <a href="/elopez/learning" class="nav-item">Learning</a>
+        <a href="/elopez/reading" class="nav-item">Reading</a>
         <a href="/elopez/notes" class="nav-item">Notes</a>
       </div>
     </div>
