--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
     <main>
       
 <h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
-<p>I'm a <a href="https://linkedin.com/iam/eduardolopez">product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I currently lead product marketing at <a href="https://lithic.com">Lithic</a>. This blog is where I'll share my essays, notes, and what I'm reading.</p>
-<p>Get in touch on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a> and on <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>.</p>
+<p>I'm a <a href="https://linkedin.com/iam/eduardolopez">fintech product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I currently lead product marketing at <a href="https://lithic.com">Lithic</a>. This blog is where I'll share my essays, notes, and what I'm reading.</p>
+<p>Connect with me on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>, <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>, <a href="https://medium.com/@fintechgtm">Medium</a></p>
+<h2>About Me</h2>
+<ul>
+  <li><b>Employment:</b> Product Marketing Lead at Lithic</li>
+  <li><b>Specialties:</b> GTM Strategy, Product Positioning, Content Marketing</li>
+  <li><b>Interests:</b> Fintech, Payment Systems</li>
+  <li><b>Newsletter:</b> Fintech Explainers</li>
+  <li><b>Sample Articles:</b> <a href="https://fintechgtm.substack.com/p/us-fintech-and-payments-crash-course">U.S. Fintech & Payments Crash Course</a>, <a href="https://fintechgtm.substack.com/p/payment-cards-deep-dive">Payments Card Deep Dive</a>, <a href="https://www.lithic.com/blog/interchange">Guide to Interchange Revenue</a>, <a href="https://www.lithic.com/blog/digital-wallets">Guide to Digital Wallets and Tokenized Cards</a>, <a href="https://www.lithic.com/blog/maximizing-interchange">Maximizing Interchange Revenue</a>, <a href="https://www.lithic.com/blog/bank-partners">Fintech Bank Partnerships</a>, <a href="https://www.lithic.com/blog/card-program-management">Card Program Management</a>
 
 <hr style="margin: 3em 0;" />
 <h2>Latest</h2>
