--- a/notes.html
+++ b/notes.html
@@ -55,11 +55,12 @@
     <div class="grid twelve">
       <h1>Notes From the Field</h1>
       <article>
-        <p>Welcome to my notes! I was inspired by <a href="https://notes.alexkehayias.com/">Alex Kehayias' website</a> and decided to start publishing notes to better understand what I&rsquo;ve learned and to explore new ideas. I would love to hear from you—leave a comment or reach out on twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
-<p>What&rsquo;s on my mind lately?</p>
+        <p>Welcome to my notes! This is a free space for me to better understand what I've learned, explore new ideas, and share thoughts about what I'm reading. I would love to hear from you—leave a comment or reach out on twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>.</p>
+<h2>What I'm learning about</h2>
 <ul>
-<li>Building an online community</li>
-<li>Personal finance systems</li>
+	<li>How to build an online community</li>
+	<li>Fintech business models</li>
+	<li>Real-time payments</li>
 </ul>
 
       </article>
