--- a/notes.html
+++ b/notes.html
@@ -34,7 +34,7 @@
     </div>
     <a href="/elopez/essays" class="nav-item">Essays</a>
     <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-    <a href="/elopez/learning" class="nav-item">Learning</a>	  
+    <a href="/elopez/reading-list" class="nav-item">Reading</a>	  
   </div>
 </nav>
 
