--- a/notes.html
+++ b/notes.html
@@ -8,6 +8,8 @@
   <meta name="title" content=
 "Eduardo's Notes"
 >
+  <link rel="stylesheet" type="text/css" href="main.css">
+	
   
   <title>Eduardo's Notes</title>
   <link rel="icon" href="/img/favicon.png">
@@ -34,7 +36,7 @@
     </div>
     <a href="/elopez/essays" class="nav-item">Essays</a>
     <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-    <a href="/elopez/reading-list" class="nav-item">Reading</a>	  
+    <a href="/elopez/reading" class="nav-item">Reading</a>	  
   </div>
 </nav>
 
