--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <meta name="twitter:title" content="">
   <meta name="twitter:site" content="https://elopez.net">
   <meta name="twitter:image" content="/img/favicon.png">
-  <meta name="twitter:creator" content="@alexkehayias">
+  <meta name="twitter:creator" content="@fintechgtm">
   <link rel="icon" href="/img/favicon.png">
   <link rel="stylesheet" type="text/css" href="main.css">
+  
   
   <link rel="alternate" type="application/rss+xml" title="RSS" href="X">
   
