--- a/essays.html
+++ b/essays.html
@@ -7,13 +7,13 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="">
   <meta name="twitter:title" content="">
-  <meta name="twitter:site" content="https://alexkehayias.com">
+  <meta name="twitter:site" content="https://elopez.net">
   <meta name="twitter:image" content="/img/favicon.png">
-  <meta name="twitter:creator" content="@alexkehayias">
+  <meta name="twitter:creator" content="@fintechgtm">
   <link rel="icon" href="/img/favicon.png">
   <link rel="stylesheet" type="text/css" href="main.css">
   
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https:&#x2F;&#x2F;www.alexkehayias.com&#x2F;atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="https:&#x2F;&#x2F;www.elopez.net&#x2F;atom.xml">
   
 </head>
 <body>
@@ -25,10 +25,10 @@
             <span class="logo">EL</span>
           </a>
         </div>
-        <a href="/essays" class="nav-item">Essays</a>
-        <a href="/talks" class="nav-item">Talks</a>
-        <a href="/projects" class="nav-item">Projects</a>
-        <a href="https://notes.alexkehayias.com" class="nav-item">Notes</a>
+        <a href="/elopez/essays" class="nav-item">Essays</a>
+        <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
+        <a href="/elopez/reading" class="nav-item">Reading</a>
+        <a href="/elopez/notes" class="nav-item">Notes</a>
       </div>
     </div>
     <main>
