--- a/essays.html
+++ b/essays.html
@@ -70,7 +70,7 @@
     </p>
     <p>
       <span style="color: #878787;">2022-10-25</span><br/>
-      A deep dive on fintech bank partnerships (aka sponsor banks).
+      A deep dive on fintech bank partnerships.
       
     </p>      
       
