--- a/fintech-bank-partnerships.html
+++ b/fintech-bank-partnerships.html
@@ -42,7 +42,7 @@
   </h1>
   <div class="container">
     <small class="grid eight description">
-      A deep dive on fintech bank partnerships (aka sponsor banks).
+      A deep dive on fintech bank partnerships.
     </small>
   </div>
 </div>
