--- a/reading.html
+++ b/reading.html
@@ -27,6 +27,7 @@
         </div>
         <a href="/elopez/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
+        <a href="" class="nav-item">Reading</a>
         <a href="/elopez/notes" class="nav-item">Notes</a>
       </div>
     </div>
