--- a/1984.html
+++ b/1984.html
@@ -38,19 +38,19 @@
     Notes
   </small>
   <h1 class="title">
-    1984 Review: I love big brother
+    1984 Book Review: "I Love Big Brother"
   </h1>
 </div>
 <article style="margin-top: 30px;">
 <blockquote>
 <p>&ldquo;Everything can be taken from a man but one thing: the last of the human freedoms&mdash;to choose one&rsquo;s attitude in any given set of circumstances, to choose one&rsquo;s own way.&rdquo;―&nbsp;<strong>Viktor E. Frankl,&nbsp;Man's Search for Meaning</strong></p>
 </blockquote>
-<p>The end of George Orwell's 1984 is a sad and thought-provoking ending to the book's message about totalitarianism, rebellion, and the illusion of reality. I was rooting for Winston up until the end, hoping he could hold on to even an inch of his hate for big brother.</p>
+<p>The end of George Orwell's 1984 is a sad and thought-provoking ending to the book's message about totalitarianism, rebellion, and the illusion of reality. I was rooting for Winston up until the end, hoping he could hold on to his hate for big brother.</p>
 <h2>Similarities with Cuba</h2>
-<p>As a Cuban-American, I found myself often comparing Winston&rsquo;s experience to my family&rsquo;s. Before the internet came to Cuba, the island was truly closed off. Unless you worked in the heart of the capital, you wouldn&rsquo;t come into contact with tourists. They weren&rsquo;t even allowed to stay in the residential parts of the country. There was no cell phone access and very few people, if at all, could afford a telephone or make an international call.</p>
-<p>The book is right in saying that when you&rsquo;re closed off from the outside world and unable to compare your living situation with others, it&rsquo;s hard to feel oppressed.</p>
+<p>As a Cuban-American, I found myself comparing Winston&rsquo;s experience to my family&rsquo;s. Before the internet came to Cuba, the island was totally closed off. Unless you worked in the heart of the capital, you wouldn&rsquo;t come into contact with tourists. They weren&rsquo;t even allowed to stay in the residential parts of the country. There was no cell phone access and very few people could afford a telephone or make an international call.</p>
+<p>I think the book is right in saying that when you&rsquo;re closed off from the outside world and unable to compare your living situation with others, it&rsquo;s hard to feel oppressed. I've seen it firsthand.</p>
 <p>Doesn&rsquo;t everyone have it this bad? Maybe worse?</p>
-<p>Another similarity between Cuba and 1984 was the animosity they encouraged between citizens and the brainwashing. You were encouraged to watch your neighbors and family and inform the government whenever you witnessed someone breaking the rules. My uncle, who has long since passed away, had a hard time in Cuba because he was a gay man. A neighbor informed the party that he was homosexual and he was rounded up and incarcerated in a labor camp to &ldquo;turn him&rdquo; heterosexual.</p>
+<p>Another similarity between Cuba and 1984 was the animosity they encouraged between citizens and the brainwashing. In Cuba, you were encouraged to watch your neighbors and family and inform the government whenever you witnessed someone breaking the rules. My uncle, who has long since passed away, had a hard time in Cuba because he was a gay man. A neighbor informed the party that he was homosexual and he was rounded up and incarcerated in a labor camp to &ldquo;turn him&rdquo; heterosexual.</p>
 <p>It&rsquo;s wild to think about how all of this closely resembles the thought police and joycamps.</p>
 <h2>Insights from the book</h2>
 <ol>
@@ -69,7 +69,7 @@
 <li>Did O&rsquo;Brien actually co-author &ldquo;The Book&rdquo; or was that just another example of the Party taking credit for others&rsquo; work?</li>
 <li>Did they bait him with that photograph of the three prisoners or was its inclusion a mistake?</li>
 <li>If Winston purchased the journal from someone in the thought police, they knew he had the journal all along. So how long had they been reading his journal?</li>
-<li>What Julia actually in the thought police? I know they make it seem like she was definitely tortured in the end and possibly had a lobotomy, but there were so many suspicious things about her:<ol>
+<li>Was Julia actually in the thought police? I know they make it seem like she was definitely tortured in the end and possibly had a lobotomy, but there were so many suspicious things about her:<ol>
 <li>She knew so much about Winston from the beginning (e.g. his name, the perfume her mom used, the chocolate).</li>
 <li>She asked him to read The Book aloud instead of reading it with him. It&rsquo;s as if she wanted him to be heard by the tv.</li>
 <li>Speaking of tv, it&rsquo;s suspicious that she actually pointed out the picture frame that was hiding the telescreen. &ldquo;I bet that picture&rsquo;s got bugs behind it.&rdquo;</li>
