--- a/notes.html
+++ b/notes.html
@@ -34,9 +34,10 @@
         <span class="logo">EL</span>
       </a>
     </div>
-    <a href="/elopez/essays" class="nav-item">Essays</a>
-    <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-    <a href="/elopez/reading" class="nav-item">Reading</a>	  
+        <a href="/" class="nav-item">Home</a>
+        <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
+        <a href="/reading" class="nav-item">Reading</a>
+        <a href="/notes" class="nav-item">Notes</a>	  
   </div>
 </nav>
 
