--- a/notes.html
+++ b/notes.html
@@ -35,9 +35,9 @@
       </a>
     </div>
         <a href="/" class="nav-item">Home</a>
+        <a href="/essays" class="nav-item">Essays</a>	  
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
         <a href="/reading" class="nav-item">Reading</a>
-        <a href="/notes" class="nav-item">Notes</a>	  
   </div>
 </nav>
 
