--- a/reading.html
+++ b/reading.html
@@ -25,9 +25,9 @@
             <span class="logo">EL</span>
           </a>
         </div>
+        <a href="/" class="nav-item">Home</a>        
         <a href="/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-        <a href="/reading" class="nav-item">Reading</a>
         <a href="/notes" class="nav-item">Notes</a>	  
       </div>
     </div>
