--- a/notes.html
+++ b/notes.html
@@ -24,16 +24,14 @@
   
 </head>
 <body>
-    <div class="content">
-    <div class="main-container">
-      
-<nav class="row">
-  <div class="grid twelve" style="display: flex; align-items: center;">
-    <div style="flex: 1 1 0%; display: flex; align-items: center;">
-      <a class="logolink" href="https://fintechgtm.github.io/elopez">
-        <span class="logo">EL</span>
-      </a>
-    </div>
+     <div class="main-container">
+    <div class="row" style="margin-bottom: 20px;">
+      <div class="grid twelve" style="display: flex; align-items: center;">
+        <div style="flex-grow: 1;">
+          <a href="/elopez" style="text-decoration: none; color: inherit;">
+            <span class="logo">EL</span>
+          </a>
+        </div>
         <a href="/" class="nav-item">Home</a>
         <a href="/essays" class="nav-item">Essays</a>	  
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
