--- a/reading.html
+++ b/reading.html
@@ -21,7 +21,7 @@
     <div class="row" style="margin-bottom: 20px;">
       <div class="grid twelve" style="display: flex; align-items: center;">
         <div style="flex-grow: 1;">
-          <a href="/elopez" style="text-decoration: none; color: inherit;">
+          <a href="/" style="text-decoration: none; color: inherit;">
             <span class="logo">EL</span>
           </a>
         </div>
