--- a/fintech-bank-partnerships.html
+++ b/fintech-bank-partnerships.html
@@ -21,14 +21,14 @@
     <div class="row" style="margin-bottom: 20px;">
       <div class="grid twelve" style="display: flex; align-items: center;">
         <div style="flex-grow: 1;">
-          <a href="/elopez" style="text-decoration: none; color: inherit;">
+          <a href="/" style="text-decoration: none; color: inherit;">
             <span class="logo">EL</span>
           </a>
         </div>
-        <a href="/elopez/essays" class="nav-item">Essays</a>
+        <a href="/essays" class="nav-item">Essays</a>
         <a href="https://fintechgtm.substack.com" class="nav-item">Newsletter</a>
-        <a href="/elopez/reading" class="nav-item">Reading</a>
-        <a href="/elopez/notes" class="nav-item">Notes</a>
+        <a href="/reading" class="nav-item">Reading</a>
+        <a href="/notes" class="nav-item">Notes</a>
       </div>
     </div>
     <main>
