--- a/notes.html
+++ b/notes.html
@@ -49,7 +49,7 @@
 <hr style="margin: 3em 0;" />
 <p style="margin: 0;">
       
-        <a style="font-weight: 500;" href="/elopez/1984">1984 Book Review: "I Love Big Brother"</a>
+        <a style="font-weight: 500;" href="/notes/1984">1984 Book Review: "I Love Big Brother"</a>
         
     </p>
     <p>
