--- a/essays/maximizing-interchange.html
+++ b/essays/maximizing-interchange.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 <article style="margin-top: 30px;">
-<p>In my first&nbsp;<a href="/interchange-revenue">Interchange Guide</a>, I explained the basics of interchange fees, how interchange works, how it&rsquo;s shared between all of the participants in a transaction, and the main factors that impact your interchange take rate.</p>
+<p>In my first&nbsp;<a href="/essays/interchange-revenue">Interchange Guide</a>, I explained the basics of interchange fees, how interchange works, how it&rsquo;s shared between all of the participants in a transaction, and the main factors that impact your interchange take rate.</p>
 <p>I found a number of pieces written on this topic, but they were all geared to community banks and credit unions. In this guide, I'll provide actionable tips that fintech founders and operators can use to maximize their interchange revenue.</p>
 <p>This guide covers:</p>
 <ul>
