--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       
 <h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
 <p>I'm a <a href="https://linkedin.com/iam/eduardolopez">fintech product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I currently lead product marketing at <a href="https://lithic.com">Lithic</a>. This blog is where I'll share my essays, notes, and what I'm reading.</p>
-<p>Connect with me on Twitter <a href="https://twitter.com/fintechgtm">@fintechgtm</a>, <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>, <a href="https://medium.com/@fintechgtm">Medium</a></p>
+<p>Connect with me on <a href="https://twitter.com/fintechgtm">Twitter</a>, <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>, <a href="https://medium.com/@fintechgtm">Medium</a></p>
 <h2>About Me</h2>
 <ul>
   <li><b>Employment:</b> Product Marketing Lead at Lithic</li>
