--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
 <p>I'm a <a href="https://linkedin.com/iam/eduardolopez">fintech product marketer</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I currently lead product marketing at <a href="https://lithic.com">Lithic</a>. This blog is where I'll share my essays, notes, and what I'm reading.</p>
 <p>Connect with me on <a href="https://twitter.com/fintechgtm">Twitter</a>, <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>, <a href="https://medium.com/@fintechgtm">Medium</a></p>
+<iframe src="https://fintechgtm.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>      
 <h2>About Me</h2>
 <ul>
   <li><b>Employment:</b> Product Marketing Lead at Lithic</li>
