--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="twitter:description" content="">
   <meta name="twitter:title" content="">
   <meta name="twitter:site" content="https://elopez.net">
-  <meta name="twitter:image" content="/favicon.ico">
+  <meta name="twitter:image" content="">
   <meta name="twitter:creator" content="@fintechgtm">
-  <link rel="icon" href="/img/favicon.png">
+  <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" type="text/css" href="main.css">
   
   
