--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hello! I'm Eduardo Lopez. Product Marketer and Author of the Fintech Explainers newsletter. I lead go-to-market strategy and product marketing for fintechs.">
-  <meta name="keywords" content="eduardo lopez, eduardolopez">
-  <meta name="title" content="Eduardo Lopez">
+  <meta name="keywords" content="Eduardo Lopez, fintech marketing, Fintech product marketing, head of product marketing">
+  <meta name="title" content="Eduardo Lopez | Fintech & Product Marketing">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:title" content="">
+  <meta name="twitter:description" content="Hello! I'm Eduardo Lopez. Product Marketer and Author of the Fintech Explainers newsletter. I lead go-to-market strategy and product marketing for fintechs.">
+  <meta name="twitter:title" content="Eduardo Lopez | Fintech & Product Marketing">
   <meta name="twitter:site" content="https://elopez.net">
   <meta name="twitter:image" content="">
   <meta name="twitter:creator" content="@fintechgtm">
