--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <li><b>Specialties:</b> GTM Strategy, Product Positioning, Content Marketing</li>
   <li><b>Interests:</b> Fintech, Payment Systems</li>
   <li><b>Newsletter:</b> Fintech Explainers</li>
-  <li><b>Sample Articles:</b> <a href="https://fintechgtm.substack.com/p/us-fintech-and-payments-crash-course">U.S. Fintech & Payments Crash Course</a>, <a href="https://fintechgtm.substack.com/p/payment-cards-deep-dive">Payments Card Deep Dive</a>, <a href="https://www.lithic.com/blog/interchange">Guide to Interchange Revenue</a>, <a href="https://www.lithic.com/blog/digital-wallets">Guide to Digital Wallets and Tokenized Cards</a>, <a href="https://www.lithic.com/blog/maximizing-interchange">Maximizing Interchange Revenue</a>, <a href="https://www.lithic.com/blog/bank-partners">Fintech Bank Partnerships</a>, <a href="https://www.lithic.com/blog/card-program-management">Card Program Management</a>
+  <li><b>Sample Articles:</b> <a href="https://fintechgtm.substack.com/p/payment-cards-deep-dive">Payment Cards</a>, <a href="essays/interchange-revenue">Interchange Revenue</a>, <a href="essays/digital-wallet-cards">Digital Wallets and Tokenized Cards</a>, <a href="/essays/maximizing-interchange">Maximizing Interchange Revenue</a>, <a href="/essays/fintech-bank-partnerships">Fintech Bank Partnerships</a>, <a href="https://www.lithic.com/blog/card-program-management">Card Program Management</a>
 
     </main>
   </div>
