--- a/notes.html
+++ b/notes.html
@@ -74,7 +74,7 @@
 <p>	      
 <p style="margin: 0;">
       
-        <a style="font-weight: 500;" href="/notes/2023-resolutions">My 2023 New Year's Resolutions"</a>
+        <a style="font-weight: 500;" href="/notes/2023-resolutions">My 2023 New Year's Resolutions</a>
         
     </p>
     <p>
