--- a/notes.html
+++ b/notes.html
@@ -55,7 +55,7 @@
     </p>	      
     <p>
       <span style="color: #878787;">2023-01-16</span><br/>
-      My thoughts on 1984 by The Hitchhiker's Guide to the Galaxy by Douglas Adams.
+      My thoughts on The Hitchhiker's Guide to the Galaxy by Douglas Adams.
       
     </p>
       
