--- a/reading.html
+++ b/reading.html
@@ -35,24 +35,25 @@
       
 <h1 class="title">Reading List</h1>
 
-<p><strong>Reading List:</strong>&nbsp;The following is an ever-evolving list of books I&rsquo;m hoping to read (or in many cases re-read) in 2023. Classics, sci-fi, nonfiction, or anything people highly recommend. Some are short stories, some are long books. I try to alternate very short books with long ones.</p>
-<p><strong>Motivation for Selection:&nbsp;</strong>I noticed that in the past few years, I&nbsp;started&nbsp;reading a lot more nonfiction, and that it&rsquo;s been a while since I revisited many of the books that had a big impact on my life (by Dostoevsky, Camus, Hesse, etc.) Also, an obvious giant gap in my reading has been science fiction, and so I&nbsp;added&nbsp;a bunch of sci-fi books that a lot of my good friends have been recommending. I hope to keep evolving this list based on suggestions and discussions. Here are direct links to posts about this on social media:&nbsp;<a href="https://www.reddit.com/r/lexfridman/comments/10045g8/book_reading_list_for_2023_post_from_lex/" rel="noopener" target="_blank">Reddit</a>,&nbsp;<a href="https://twitter.com/lexfridman/status/1609301085524578304" rel="noopener">Twitter</a>,&nbsp;<a href="https://www.youtube.com/post/UgkxnKi2CbLfbPYPCm-Ms2eqv9JgDoc0skJ8" rel="noopener">YouTube</a>,&nbsp;<a href="https://www.linkedin.com/feed/update/urn:li:activity:7015067968829104128/" rel="noopener">LinkedIn</a>,&nbsp;<a href="https://www.instagram.com/p/Cm2QMuyOjbE/">Instagram</a>,&nbsp;<a href="https://www.facebook.com/lexfridman/posts/pfbid02GMuK4zM8jNb9kR5szEpWuUdkkW3jyd7hzuqfzzx7F1GAPE46hF3XzJnGPDnj3Bc6l" rel="noopener">Facebook</a>. I think Reddit and Twitter is probably the best place to make suggestions and do discussions.</p>
-<p><strong>Motivation for Sharing:</strong>&nbsp;I usually make a goal reading list for myself privately, but in this case&nbsp; I chose to do it publicly so that folks who are interested might join me on some of the books. That&rsquo;s why I tried to set a schedule for it, with a target&nbsp;day&nbsp;to finish by, so people can sync up their involvement. Some stories/books take 1-2 hours, and some take 40+ hours to read (not counting the time to pause,&nbsp;think&nbsp;&amp; write down notes). If you join in, please take as long as you need to enjoy the book. The idea of many people reading the same book at the same time is exciting, like we&rsquo;re taking the journey through that world together.&nbsp;</p>
-<p>Here&rsquo;s the list as it currently stands, with goal dates of when to finish the book/story by:&nbsp;</p>
+<p>One of my <a href=“/../notes/2023-resolutions”>resolutions</a> this year is to read one classic book per week. This is something I’ve been wanting to do for quite some time so when I saw that Lex Fridman shared his reading list, I decided to join in.</p>
+<p>I’ve adapted this list with a few books I’ve been interested in reading or re-reading. These books span classic literature, science fiction, dystopian, mystery, fantasy, philosophy, and other works that are highly recommended.</p>
+<p>My motivation for taking on this goal is really similar to Lex’s – I’ve been reading mostly work-related nonfiction for the last few years and want to get back into the type of books that had a big impact on my life. I hope to keep evolving this list based on suggestions and discussions.</p>
+<p>To help with my writing habit, I’m going to brain dump my thoughts about the book I read that week in the notes section of my blog.</p>
+<p><b>Here’s the list as it currently stands with goal dates:</b></p>
 <ul>
 <li>Sun, Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell</li>
 <li>Sun, Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams</li>
 <li>Sun, Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley</li>
 <li>Sun, Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus</li>
-<li>Sun, Feb 5 &ndash;&nbsp;<strong>Meditations</strong>&nbsp;by Marcus Aurelius</li>
+<li>Sun, Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
 <li>Sun, Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
 <li>Sun, Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov</li>
 <li>Sun, Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
 <li>Sun, Mar 5 &ndash;&nbsp;<strong>Old Man and The Sea</strong>&nbsp;by Hemingway</li>
-<li>Sun, Mar 12 &ndash;&nbsp;<strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
+<li>Sun, Mar 12 &ndash;&nbsp;<strong>The Unbearable Lightness of Being</strong> by Milan Kundera</li>
 <li>Sun, Mar 19 &ndash;&nbsp;<strong>Animal Farm</strong>&nbsp;by George Orwell</li>
 <li>Sun, Mar 26 &ndash;&nbsp;<strong>Man&rsquo;s Search for Meaning</strong>&nbsp;by Victor Frankel</li>
-<li>Sun, Apr 2 &ndash;&nbsp;<strong>Sapiens&nbsp;</strong>by Yuval Noah Harari</li>
+<li>Sun, Apr 2 &ndash;&nbsp;<strong>The Giver</strong>&nbsp;by Lois Lowry</li>
 <li>Sun, Apr 9 &ndash;&nbsp;<strong>Metamorphosis, Hunger Artist</strong>&nbsp;by Franz Kafka</li>
 <li>Sun, Apr 16 &ndash;&nbsp;<strong>The Plague</strong>&nbsp;by Camus</li>
 <li>Sun, Apr 23 &ndash;&nbsp;<strong>Player of Games</strong>&nbsp;by Ian Banks</li>
@@ -62,48 +63,48 @@
 <li>Sun, May 21 &ndash;&nbsp;<strong>Siddhartha</strong>&nbsp;by Herman Hesse</li>
 <li>Sun, May 28 &ndash;&nbsp;<strong>Dune</strong>&nbsp;by Frank Herbert</li>
 <li>Sun, Jun 4 &ndash;&nbsp;<strong>Frankenstein</strong>&nbsp;by Mary Shelley</li>
+<li>Sun, Jun 11 &ndash; <strong><strong><strong><strong><strong><strong><strong><strong>The Wealth of Nations</strong></strong></strong></strong></strong></strong></strong></strong> by Adam Smith</li>
+<li>Sun, Jun 18 &ndash; <strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
+<li>Sun, Jun 25 &ndash; <strong>Candide</strong> by Voltaire</li>
+<li>Sun, Jul 2 &ndash; <strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
+<li>Sun, Jul 9 &ndash; <strong>Of Mice and Men</strong> by John Steinbeck</li>
+<li>Sun, Jul 16 &ndash; <strong>Anna Karenina</strong> by Leo Tolstoy</li>
+<li>Sun, Jul 23 &ndash; <strong>The Magic Mountain</strong> by Thomas Mann</li>
+<li>Sun, Jul 30 &ndash; <strong>Flowers for Algernon</strong> by Daniel Keyes</li>
+<li>Sun, Aug 6 &ndash;&nbsp;<strong>Slaughterhouse-Five</strong> by Kurt Vonnegut Jr.</li>
+<li>Sun, Aug 13 &ndash;&nbsp;<strong>The Man in the High Castle</strong> by Philip Dick</li>
+<li>Sun, Aug 20 &ndash;&nbsp;<strong>Pride and Prejudice</strong> by Jane Austen</li>
+<li>Sun, Aug 27 &ndash;&nbsp;<strong>Les Mis&eacute;rables</strong> by Victor Hugo</li>
+<li>Sun, Sep 3 &ndash;&nbsp;<strong>Don Juan</strong> by Moli&egrave;re</li>
+<li>Sun, Sep 10 &ndash;&nbsp;<strong>One Hundred Years of Solitude</strong> by Gabriel Garcia Marquez</li>
+<li>Sun, Sep 17 &ndash;&nbsp;<strong>The Divine Comedy</strong> by Dante Alighieri</li>
+<li>Sun, Sep 24 &ndash;&nbsp;<strong>Infinite Jest</strong> by David Foster Wallace</li>
+<li>Sun, Oct 1 &ndash;&nbsp;<strong>Poor Charlie's Almanack</strong> by Charles T. Munger</li>
+<li>Sun, Oct 8 &ndash;&nbsp;<strong>The Yellow Wallpaper</strong>&nbsp;by Charlotte Perkins Gilman</li>
+<li>Sun, Oct 15 &ndash;&nbsp;<strong>The Four Agreements</strong>&nbsp;by Don Miguel Ruiz</li>
+<li>Sun, Oct 22 &ndash;&nbsp;<strong>The Prince</strong>&nbsp;by Machiavelli</li>
+<li>Sun, Oct 29 &ndash;&nbsp;<strong>Fahrenheit 451</strong>&nbsp;by Ray Bradbury</li>
+<li>Sun, Nov 5 &ndash;&nbsp;<strong>Disgrace</strong>&nbsp;by J. M. Coetzee</li>
+<li>Sun, Nov 12 &ndash;&nbsp;<strong>Flowers for Algernon</strong>&nbsp;by Daniel Keyes</li>
+<li>Sun, Nov 19 &ndash;&nbsp;<strong>I, Robot</strong>&nbsp;by Isaac Asimov</li>
+<li>Sun, Nov 26 &ndash;&nbsp;<strong>The Dead</strong>&nbsp;by James Joyce</li>
+<li>Sun, Dec 3 &ndash;&nbsp;<strong>The Book of Five Rings</strong>&nbsp;by Miyamoto Musashi</li>
+<li>Sun, Dec 10 &ndash;&nbsp;<strong>Heart of Darkness</strong>&nbsp;by Joseph Conrad</li>
+<li>Sun, Dec 17 &ndash;&nbsp;<strong>A Wild Sheep Chase</strong> by Haruki Murakami</li>
+<li>Sun, Dec 24 &ndash;&nbsp;T<strong><strong>he Outsiders</strong></strong> by&nbsp;S.E. Hinton</li>
+<li>Sun, Dec 31 &ndash;&nbsp;<strong><strong>The Catcher in the Rye</strong></strong> by J. D. Salinger</li>
 </ul>
-<p>Here&rsquo;s some other suggestions I&rsquo;m considering. Others are welcome:</p>
+<p>Additionally, there are some essays I&rsquo;d love to read but I&rsquo;m not sure when I&rsquo;ll tackle them:</p>
 <ul>
-<li><strong>The Dead</strong>&nbsp;by James Joyce</li>
-<li><strong>The Yellow Wallpaper</strong>&nbsp;by Charlotte Perkins Gilman</li>
-<li><strong>Ward No. 6</strong>&nbsp;by Anton Chekhov</li>
-<li><strong>Anthem</strong>&nbsp;by Ayn Rand</li>
-<li><strong>The Book of Five Rings</strong>&nbsp;by Miyamoto Musashi</li>
-<li><strong>The Four Agreements</strong>&nbsp;by Don Miguel Ruiz</li>
-<li><strong>Nightfall, Last Question</strong>&nbsp;by Isaac Asimov</li>
-<li><strong>The Little Trilogy</strong>&nbsp;by Anton Chekhov</li>
-<li><strong>The Nose, The Overcoat</strong>&nbsp;by Gogol</li>
-<li><strong>Heart of Darkness</strong>&nbsp;by Joseph Conrad</li>
-<li><strong>Notes from Underground</strong>&nbsp;by Dostoevsky</li>
-<li><strong>The Giver</strong>&nbsp;by Lois Lowry</li>
-<li><strong>The Prince</strong>&nbsp;by Machiavelli</li>
-<li><strong>Disgrace</strong>&nbsp;by J. M. Coetzee</li>
-<li><strong>Fahrenheit 451</strong>&nbsp;by Ray Bradbury</li>
-<li><strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
-<li><strong>The Road</strong>&nbsp;by Cormac McCarthy</li>
-<li><strong>Where the Red Fern Grows</strong>&nbsp;by Wilson Rawls</li>
-<li><strong>A Good Man Is Hard to Find</strong>&nbsp;by Flannery O&rsquo;Connor</li>
-<li><strong>Beyond Good and Evil</strong>&nbsp;by Friedrich Nietzsche</li>
-<li><strong>On Writing</strong>&nbsp;by Stephen King</li>
-<li><strong>Solaris</strong>&nbsp;by Stanislaw Lem</li>
-<li><strong>Childhood&rsquo;s End</strong>&nbsp;by Arthur C Clarke</li>
-<li><strong>Do Androids Dream of Electric Sheep?</strong>&nbsp;by Philip K Dick</li>
-<li><strong>Flowers for Algernon</strong>&nbsp;by Daniel Keyes</li>
-<li><strong>I, Robot</strong>&nbsp;by Isaac Asimov</li>
-<li><strong>The Diary of a Young Girl</strong>&nbsp;by Anne Frank</li>
-<li><strong>Master and Margarita</strong>&nbsp;by Mikhail Bulgakov</li>
-<li><strong>Ender&rsquo;s Game</strong>&nbsp;by Orson Scott Card</li>
-<li><strong>Surely You&rsquo;re Joking, Mr. Feynman</strong>&nbsp;by Richard Feynman</li>
-<li><strong>Dead Souls</strong>&nbsp;by Gogol</li>
-<li><strong>12 Rules for Life</strong>&nbsp;by Jordan Peterson</li>
-<li><strong>Snow Crash</strong>&nbsp;by Neal Stephenson</li>
-<li><strong>The Moon Is a Harsh Mistress</strong>&nbsp;by Robert Heinlein</li>
-<li><strong>Three-Body Problem</strong>&nbsp;by Cixin Liu</li>
-<li><strong>Stranger in a Strange Land</strong>&nbsp;by Robert Heinlein</li>
-<li><strong>Godel, Escher, Bach</strong>&nbsp;by Douglas R. Hofstadter</li>
-<li><strong>The Idiot</strong>&nbsp;by Dostoevsky</li>
-</ul>      
+<li><strong>Michel de Montaigne&rsquo;s</strong> library of essays</li>
+<li><strong>Paul Graham&rsquo;s</strong> library of essays</li>
+<li><strong>How to Travel with a Salmon</strong> by Umberto Eco</li>
+<li><strong>Shooting an Elephant</strong> by George Orwell</li>
+<li><strong>The Fourth State of Matter</strong> by Jo Ann Beard</li>
+<li><strong>Self-Reliance</strong> by Ralph Waldo Emerson</li>
+<li><strong>Consider The Lobster</strong>&nbsp;by David Foster Wallace</li>
+<li><strong>Notes of a Native Son</strong>&nbsp;by James Baldwin</li>
+</ul>
       
     </main>
   </div>
