--- a/reading.html
+++ b/reading.html
@@ -41,9 +41,9 @@
 <p>To help with my writing habit, I’m going to brain dump my thoughts about the book I read that week in the notes section of my blog.</p>
 <p><b>Here’s the list as it currently stands with goal dates:</b></p>
 <ul>
-<li>Sun, Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell</li>
-<li>Sun, Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams</li>
-<li>Sun, Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley</li>
+<li>Sun, Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell (<a href:"/../notes/1984">Completed</a>)</li>
+<li>Sun, Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href:"/../notes/hhgtg">Completed</a>)</li>
+<li>Sun, Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (In Progress)</li>
 <li>Sun, Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus</li>
 <li>Sun, Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
 <li>Sun, Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
