--- a/reading.html
+++ b/reading.html
@@ -41,58 +41,58 @@
 <p>To help with my writing habit, I’m going to brain dump my thoughts about the book I read that week in the notes section of my blog.</p>
 <p><b>Here’s the list as it currently stands with goal dates:</b></p>
 <ul>
-<li>Sun, Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell (<a href:"/../notes/1984">Completed</a>)</li>
-<li>Sun, Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href:"/../notes/hhgtg">Completed</a>)</li>
-<li>Sun, Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (In Progress)</li>
-<li>Sun, Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus</li>
-<li>Sun, Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
-<li>Sun, Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
-<li>Sun, Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov</li>
-<li>Sun, Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
-<li>Sun, Mar 5 &ndash;&nbsp;<strong>Old Man and The Sea</strong>&nbsp;by Hemingway</li>
-<li>Sun, Mar 12 &ndash;&nbsp;<strong>The Unbearable Lightness of Being</strong> by Milan Kundera</li>
-<li>Sun, Mar 19 &ndash;&nbsp;<strong>Animal Farm</strong>&nbsp;by George Orwell</li>
-<li>Sun, Mar 26 &ndash;&nbsp;<strong>Man&rsquo;s Search for Meaning</strong>&nbsp;by Victor Frankel</li>
-<li>Sun, Apr 2 &ndash;&nbsp;<strong>The Giver</strong>&nbsp;by Lois Lowry</li>
-<li>Sun, Apr 9 &ndash;&nbsp;<strong>Metamorphosis, Hunger Artist</strong>&nbsp;by Franz Kafka</li>
-<li>Sun, Apr 16 &ndash;&nbsp;<strong>The Plague</strong>&nbsp;by Camus</li>
-<li>Sun, Apr 23 &ndash;&nbsp;<strong>Player of Games</strong>&nbsp;by Ian Banks</li>
-<li>Sun, Apr 30 &ndash;&nbsp;<strong>Fight Club</strong>&nbsp;by Chuck Palahniuk</li>
-<li>Sun, May 7 &ndash;&nbsp;<strong>The Little Prince</strong>&nbsp;by Antoine de Saint-Exup&eacute;ry</li>
-<li>Sun, May 14 &ndash;&nbsp;<strong>Brothers Karamazov</strong>&nbsp;by Dostoevsky</li>
-<li>Sun, May 21 &ndash;&nbsp;<strong>Siddhartha</strong>&nbsp;by Herman Hesse</li>
-<li>Sun, May 28 &ndash;&nbsp;<strong>Dune</strong>&nbsp;by Frank Herbert</li>
-<li>Sun, Jun 4 &ndash;&nbsp;<strong>Frankenstein</strong>&nbsp;by Mary Shelley</li>
-<li>Sun, Jun 11 &ndash; <strong><strong><strong><strong><strong><strong><strong><strong>The Wealth of Nations</strong></strong></strong></strong></strong></strong></strong></strong> by Adam Smith</li>
-<li>Sun, Jun 18 &ndash; <strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
-<li>Sun, Jun 25 &ndash; <strong>Candide</strong> by Voltaire</li>
-<li>Sun, Jul 2 &ndash; <strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
-<li>Sun, Jul 9 &ndash; <strong>Of Mice and Men</strong> by John Steinbeck</li>
-<li>Sun, Jul 16 &ndash; <strong>Anna Karenina</strong> by Leo Tolstoy</li>
-<li>Sun, Jul 23 &ndash; <strong>The Magic Mountain</strong> by Thomas Mann</li>
-<li>Sun, Jul 30 &ndash; <strong>Flowers for Algernon</strong> by Daniel Keyes</li>
-<li>Sun, Aug 6 &ndash;&nbsp;<strong>Slaughterhouse-Five</strong> by Kurt Vonnegut Jr.</li>
-<li>Sun, Aug 13 &ndash;&nbsp;<strong>The Man in the High Castle</strong> by Philip Dick</li>
-<li>Sun, Aug 20 &ndash;&nbsp;<strong>Pride and Prejudice</strong> by Jane Austen</li>
-<li>Sun, Aug 27 &ndash;&nbsp;<strong>Les Mis&eacute;rables</strong> by Victor Hugo</li>
-<li>Sun, Sep 3 &ndash;&nbsp;<strong>Don Juan</strong> by Moli&egrave;re</li>
-<li>Sun, Sep 10 &ndash;&nbsp;<strong>One Hundred Years of Solitude</strong> by Gabriel Garcia Marquez</li>
-<li>Sun, Sep 17 &ndash;&nbsp;<strong>The Divine Comedy</strong> by Dante Alighieri</li>
-<li>Sun, Sep 24 &ndash;&nbsp;<strong>Infinite Jest</strong> by David Foster Wallace</li>
-<li>Sun, Oct 1 &ndash;&nbsp;<strong>Poor Charlie's Almanack</strong> by Charles T. Munger</li>
-<li>Sun, Oct 8 &ndash;&nbsp;<strong>The Yellow Wallpaper</strong>&nbsp;by Charlotte Perkins Gilman</li>
-<li>Sun, Oct 15 &ndash;&nbsp;<strong>The Four Agreements</strong>&nbsp;by Don Miguel Ruiz</li>
-<li>Sun, Oct 22 &ndash;&nbsp;<strong>The Prince</strong>&nbsp;by Machiavelli</li>
-<li>Sun, Oct 29 &ndash;&nbsp;<strong>Fahrenheit 451</strong>&nbsp;by Ray Bradbury</li>
-<li>Sun, Nov 5 &ndash;&nbsp;<strong>Disgrace</strong>&nbsp;by J. M. Coetzee</li>
-<li>Sun, Nov 12 &ndash;&nbsp;<strong>Flowers for Algernon</strong>&nbsp;by Daniel Keyes</li>
-<li>Sun, Nov 19 &ndash;&nbsp;<strong>I, Robot</strong>&nbsp;by Isaac Asimov</li>
-<li>Sun, Nov 26 &ndash;&nbsp;<strong>The Dead</strong>&nbsp;by James Joyce</li>
-<li>Sun, Dec 3 &ndash;&nbsp;<strong>The Book of Five Rings</strong>&nbsp;by Miyamoto Musashi</li>
-<li>Sun, Dec 10 &ndash;&nbsp;<strong>Heart of Darkness</strong>&nbsp;by Joseph Conrad</li>
-<li>Sun, Dec 17 &ndash;&nbsp;<strong>A Wild Sheep Chase</strong> by Haruki Murakami</li>
-<li>Sun, Dec 24 &ndash;&nbsp;T<strong><strong>he Outsiders</strong></strong> by&nbsp;S.E. Hinton</li>
-<li>Sun, Dec 31 &ndash;&nbsp;<strong><strong>The Catcher in the Rye</strong></strong> by J. D. Salinger</li>
+<li>Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell (<a href:"/../notes/1984">Done</a>)</li>
+<li>Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href:"/../notes/hhgtg">Done</a>)</li>
+<li>Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (In Progress)</li>
+<li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus</li>
+<li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
+<li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
+<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov</li>
+<li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
+<li>Mar 5 &ndash;&nbsp;<strong>Old Man and The Sea</strong>&nbsp;by Hemingway</li>
+<li>Mar 12 &ndash;&nbsp;<strong>The Unbearable Lightness of Being</strong> by Milan Kundera</li>
+<li>Mar 19 &ndash;&nbsp;<strong>Animal Farm</strong>&nbsp;by George Orwell</li>
+<li>Mar 26 &ndash;&nbsp;<strong>Man&rsquo;s Search for Meaning</strong>&nbsp;by Victor Frankel</li>
+<li>Apr 2 &ndash;&nbsp;<strong>The Giver</strong>&nbsp;by Lois Lowry</li>
+<li>Apr 9 &ndash;&nbsp;<strong>Metamorphosis, Hunger Artist</strong>&nbsp;by Franz Kafka</li>
+<li>Apr 16 &ndash;&nbsp;<strong>The Plague</strong>&nbsp;by Camus</li>
+<li>Apr 23 &ndash;&nbsp;<strong>Player of Games</strong>&nbsp;by Ian Banks</li>
+<li>Apr 30 &ndash;&nbsp;<strong>Fight Club</strong>&nbsp;by Chuck Palahniuk</li>
+<li>May 7 &ndash;&nbsp;<strong>The Little Prince</strong>&nbsp;by Antoine de Saint-Exup&eacute;ry</li>
+<li>May 14 &ndash;&nbsp;<strong>Brothers Karamazov</strong>&nbsp;by Dostoevsky</li>
+<li>May 21 &ndash;&nbsp;<strong>Siddhartha</strong>&nbsp;by Herman Hesse</li>
+<li>May 28 &ndash;&nbsp;<strong>Dune</strong>&nbsp;by Frank Herbert</li>
+<li>Jun 4 &ndash;&nbsp;<strong>Frankenstein</strong>&nbsp;by Mary Shelley</li>
+<li>Jun 11 &ndash; <strong><strong><strong><strong><strong><strong><strong><strong>The Wealth of Nations</strong></strong></strong></strong></strong></strong></strong></strong> by Adam Smith</li>
+<li>Jun 18 &ndash; <strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
+<li>Jun 25 &ndash; <strong>Candide</strong> by Voltaire</li>
+<li>Jul 2 &ndash; <strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
+<li>Jul 9 &ndash; <strong>Of Mice and Men</strong> by John Steinbeck</li>
+<li>Jul 16 &ndash; <strong>Anna Karenina</strong> by Leo Tolstoy</li>
+<li>Jul 23 &ndash; <strong>The Magic Mountain</strong> by Thomas Mann</li>
+<li>Jul 30 &ndash; <strong>Flowers for Algernon</strong> by Daniel Keyes</li>
+<li>Aug 6 &ndash;&nbsp;<strong>Slaughterhouse-Five</strong> by Kurt Vonnegut Jr.</li>
+<li>Aug 13 &ndash;&nbsp;<strong>The Man in the High Castle</strong> by Philip Dick</li>
+<li>Aug 20 &ndash;&nbsp;<strong>Pride and Prejudice</strong> by Jane Austen</li>
+<li>Aug 27 &ndash;&nbsp;<strong>Les Mis&eacute;rables</strong> by Victor Hugo</li>
+<li>Sep 3 &ndash;&nbsp;<strong>Don Juan</strong> by Moli&egrave;re</li>
+<li>Sep 10 &ndash;&nbsp;<strong>One Hundred Years of Solitude</strong> by Gabriel Garcia Marquez</li>
+<li>Sep 17 &ndash;&nbsp;<strong>The Divine Comedy</strong> by Dante Alighieri</li>
+<li>Sep 24 &ndash;&nbsp;<strong>Infinite Jest</strong> by David Foster Wallace</li>
+<li>Oct 1 &ndash;&nbsp;<strong>Poor Charlie's Almanack</strong> by Charles T. Munger</li>
+<li>Oct 8 &ndash;&nbsp;<strong>The Yellow Wallpaper</strong>&nbsp;by Charlotte Perkins Gilman</li>
+<li>Oct 15 &ndash;&nbsp;<strong>The Four Agreements</strong>&nbsp;by Don Miguel Ruiz</li>
+<li>Oct 22 &ndash;&nbsp;<strong>The Prince</strong>&nbsp;by Machiavelli</li>
+<li>Oct 29 &ndash;&nbsp;<strong>Fahrenheit 451</strong>&nbsp;by Ray Bradbury</li>
+<li>Nov 5 &ndash;&nbsp;<strong>Disgrace</strong>&nbsp;by J. M. Coetzee</li>
+<li>Nov 12 &ndash;&nbsp;<strong>Flowers for Algernon</strong>&nbsp;by Daniel Keyes</li>
+<li>Nov 19 &ndash;&nbsp;<strong>I, Robot</strong>&nbsp;by Isaac Asimov</li>
+<li>Nov 26 &ndash;&nbsp;<strong>The Dead</strong>&nbsp;by James Joyce</li>
+<li>Dec 3 &ndash;&nbsp;<strong>The Book of Five Rings</strong>&nbsp;by Miyamoto Musashi</li>
+<li>Dec 10 &ndash;&nbsp;<strong>Heart of Darkness</strong>&nbsp;by Joseph Conrad</li>
+<li>Dec 17 &ndash;&nbsp;<strong>A Wild Sheep Chase</strong> by Haruki Murakami</li>
+<li>Dec 24 &ndash;&nbsp;T<strong><strong>he Outsiders</strong></strong> by&nbsp;S.E. Hinton</li>
+<li>Dec 31 &ndash;&nbsp;<strong><strong>The Catcher in the Rye</strong></strong> by J. D. Salinger</li>
 </ul>
 <p>Additionally, there are some essays I&rsquo;d love to read but I&rsquo;m not sure when I&rsquo;ll tackle them:</p>
 <ul>
