--- a/notes/hhgtg.html
+++ b/notes/hhgtg.html
@@ -10,7 +10,7 @@
   <meta name="twitter:site" content="https://elopez.net">
   <meta name="twitter:image" content="/img/favicon.png">
   <meta name="twitter:creator" content="@fintechgtm">
-  <link rel="icon" href="/img/favicon.png">
+  <link rel="icon" href="/favicon.png">
   <link rel="stylesheet" type="text/css" href="../main.css">
   
   <link rel="alternate" type="application/rss+xml" title="RSS" href="https:&#x2F;&#x2F;www.elopez.net&#x2F;atom.xml">
@@ -21,7 +21,7 @@
     <div class="row" style="margin-bottom: 20px;">
       <div class="grid twelve" style="display: flex; align-items: center;">
         <div style="flex-grow: 1;">
-          <a href="/elopez" style="text-decoration: none; color: inherit;">
+          <a href="/" style="text-decoration: none; color: inherit;">
             <span class="logo">EL</span>
           </a>
         </div>
