--- a/reading.html
+++ b/reading.html
@@ -41,8 +41,8 @@
 <p>To help with my writing habit, I’m going to brain dump my thoughts about the book I read that week in the notes section of my blog.</p>
 <p><b>Here’s the list as it currently stands with goal dates:</b></p>
 <ul>
-<li>Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell (<a href="/../notes/1984">Done</a>)</li>
-<li>Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href="/../notes/hhgtg">Done</a>)</li>
+<li>Jan 8 &ndash;&nbsp;<strong>1984</strong>&nbsp;by George Orwell (<a href="/../notes/1984">Notes</a>)</li>
+<li>Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href="/../notes/hhgtg">Notes</a>)</li>
 <li>Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (In Progress)</li>
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus</li>
 <li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
