--- a/notes/1984.html
+++ b/notes/1984.html
@@ -52,6 +52,11 @@
 <p>Doesn&rsquo;t everyone have it this bad? Maybe worse?</p>
 <p>Another similarity between Cuba and 1984 was the animosity they encouraged between citizens and the brainwashing. In Cuba, you were encouraged to watch your neighbors and family and inform the government whenever you witnessed someone breaking the rules. My uncle, who has long since passed away, had a hard time in Cuba because he was a gay man. A neighbor informed the party that he was homosexual and he was rounded up and incarcerated in a labor camp to &ldquo;turn him&rdquo; heterosexual.</p>
 <p>It&rsquo;s wild to think about how all of this closely resembles the thought police and joycamps.</p>
+<h2>Not hope, not love, not even the human spirit</h2>
+<p>In the final pages, we see Winston&rsquo;s tragic downfall as he becomes one of the proles. He always believed that salvation lay with the proles, but in the end it becomes clear that there is no hope among them either.</p>
+<p>Perhaps the most heart-wrenching aspect of Winston's downfall is the betrayal of his love for Julia. Their relationship had been a glimmer of hope throughout the novel, a bit of humanity amidst the bleakness of totalitarian rule. But in the end, even their love is not enough to defeat the Party. He finally understands the song that he had heard at the Chestnut Tree Caf&eacute;, "Under the spreading chestnut tree, I sold you and you sold me.&rdquo;</p>
+<p>Orwell's message is clear and profound: nothing, not hope, not love, not even the human spirit, can win the war against a totalitarian government. In the face of unchecked power, even the purest human emotions can be subverted and corrupted.</p>
+<p>In the US, I think we take freedom for granted. This book is a cautionary tale that reminds us to be always be vigilant in safeguarding our freedom, for it is a fragile and precious thing that can be easily lost.</p>  
 <h2>Insights from the book</h2>
 <ol>
 <li>Those who have a why to live, can bear with almost any how.</li>
